cmake_minimum_required(VERSION 3.8)
project(mowbot_gazebo_sensor_kit_description)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

# find dependencies
find_package(ament_cmake REQUIRED)

INSTALL(DIRECTORY
  config
  urdf
  DESTINATION share/${PROJECT_NAME}
)



ament_package()
